--- a/AAle.html
+++ b/AAle.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
   <!-- Site made with Mobirise Website Builder v4.4.0, https://mobirise.com -->
@@ -80,9 +80,8 @@
         <div class="media-container-column mbr-white col-lg-8 col-md-10 ml-auto">
             
             
-            <p class="mbr-text align-right pb-3 mbr-fonts-style display-5"><br><br><br><br><br><br><br><br>Are we there yet?<br>No, Kys faggit<br>We'll never be there</p>
-            <div class="mbr-section-btn align-right"><a class="btn btn-md btn-white display-4" href="https://mobirise.com"><span class="mbrib-close mbr-iconfont mbr-iconfont-btn"></span>DONATE</a> 
-                <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.com">WATCH TEASER</a></div>
+            <p class="mbr-text align-right pb-3 mbr-fonts-style display-5"><br><br><br><br><br><br><br><br><br>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Experience the future<br> &nbsp of retro gaming</p>
+            <div class="mbr-section-btn align-right"></div>
         </div>
     </div>
 
