--- a/AAle.html
+++ b/AAle.html
@@ -97,7 +97,7 @@
         <div class="media-container-row">
 
             <div class="media-content align-right">
-                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-1">Adam's Ale Teaser Trailer</h1>
+                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-1">Adam's Ale Official Teaser</h1>
                 <div class="mbr-section-text mbr-white pb-3">
                     
                 </div>
