--- a/AAle.html
+++ b/AAle.html
@@ -118,10 +118,11 @@
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-2">
-                    Article Title with Solid Background
+                    Plot and gameplay description
                 </h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">
-                    Shape your future web project with sharp design and refine coded functions.
+                [PLOT Overview]<br>
+                [GAMEPLAY Features]<br>
                 </h3>
                 
             </div>
