--- a/Gallery.html
+++ b/Gallery.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/m">drag and drop site builder</a></section><section class="mbr-gallery mbr-slider-carousel cid-qIpOnxlpIo" id="gallery2-1b">
+<section class="engine"><a href="https://mobirise.ws/l">free html site builder</a></section><section class="mbr-gallery mbr-slider-carousel cid-qIpOnxlpIo" id="gallery2-1b">
 
     
 
@@ -68,7 +68,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__comments" id="facebook-comments-block-1a" data-rv-view="38" style="background-image: url(assets/images/comments-bg.jpg); padding-top: 3rem; padding-bottom: 1.5rem;">
+<section class="mbr-section mbr-section__comments" id="facebook-comments-block-1a" data-rv-view="101" style="background-image: url(assets/images/comments-bg.jpg); padding-top: 3rem; padding-bottom: 1.5rem;">
          <div class="mbr-overlay" style="opacity: 1; background-color: rgb(35, 35, 35);">
     </div>
     <div class="mbr-section__container mbr-section__container--isolated addons-container">
